--- a/test.tex
+++ b/test.tex
@@ -169,12 +169,11 @@ However, as soon as the fine-tuning involves the observable Universe radius, it 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{\textit{The Topological Axis}. See Table 1 for data. The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the reunion of height 2D-1D holographic relations, for which five were already reported. This is the origin of the name `Topological Axis`. 
-\textit{In the macro-physics side, with length unit $\lambdabar_e$, the Electron Compton reduced wavelength, the Universe circumference $2\pi \times 13.82 billion light-year$} is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{massive string}, about 2.1 GeV. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor about 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
+\caption{\textit{The Topological Axis}(data in Table 1). The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the reunion of height 2D-1D holographic relations, for which five were already reported, hence the name `Topological Axis`. \textit{In the macro-physics side, with length unit $\lambdabar_e$, the Electron Compton reduced wavelength, the Universe circumference} $2\pi \times$ 13.812 billion light-years is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{massive string}, about 2.1 GeV. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor about 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
 The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Super-period} (section 5). 
 \textit{In the micro-physics side, with the same length unit $\lambdabar_e$}, Bott reductions from d = 30 lead to the \textit{gauge bosons}: d = 22 for the GUT one, ($10^{16}$ GeV), d = 14 for the weak one and d = 6 for the (\textit{massive}) gluons, about 8.6 MeV.
 For the intermediary superstring value d = 10, there is the mean \textit{Pion}. For d $\approx \gamma \times \Gamma$, Y $\approx 495^2$ the square of the diminushed Green-Schwarz string dimension (496 - 1), it is the \textit{Brout-Englert-Higgs boson} (125.175 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
-   \textit{With unit $2\pi$ times the Nambu mass}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by two-step holographic interaction \cite{Sanchez1}.}
+   \textit{With unit $2\pi$ times the Nambu mass 137$m_e$}\cite{Nambu}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by two-step holographic interaction \cite{Sanchez1}.}
     \textit{The central dimension is d = 16, for a total $2^7$ of string dimensions in the Bott sequence. This suggests a liaison with the Eddington's matrix $16\times 16$}.
 \label{fig:figure_label}
 \end{figure*}
@@ -731,8 +730,7 @@ with $a^{\prime} = r_H/\lambdabar_e = aH/p$. The pertinence of the numbers 136 a
 
 \subsection{The Eddington's constant 137}
 
-The initial Eddington's proposal for $a$ was the whole number 136, being the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137\cite{Eddington}, a prime number which intrigued many physicists for a century, but apparently nobody highlighted it has a fundamental mathematical property: it appears as a singular prime in the series of the maximal primes appearing in the numerator of the harmonic
-series: 3,11,5,137,7,11, showing a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above: $11/4 = (\theta_{CMB}/\theta_{CNB})^{3}$.
+The initial Eddington's proposal for $a$ was the whole number 136, being the number of independent parameters in the symmetric matrix $16 \times 16$. Note that \textit{n = 16 is the central dimension of the Topological Axis}. Later, one unity was added, becoming 137\cite{Eddington}. It shows a symmetry between the 11 dimensions of M theory (a synthesis of five string theories) and the 4 of space-time. Indeed: $137 = 11^{2} + 4^{2}$, while, as seen above: $11/4 = (\theta_{CMB}/\theta_{CNB})^{3}$.
 
 Since Riemann series are tied to the prime number distribution, it seems odd and incredible that mathematicians
 have not point out the primes appearing in the harmonic series since it is the single Riemann pole. It seems
@@ -742,7 +740,7 @@ As ancient Egyptians used only fractions of type $1/n$, they were certainly awar
 $S_{5} = 137/60$. Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
 It is strange that Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
-following shows that \textit{137 plays a central role in ppb fine-tuning analysis}. 
+following shows that \textit{137 plays a central role in ppb fine-tuning analysis}. Note that Nambu \cite{Nambu} showed that the mass 137\m_e$ is central in particle physics.
 
 
 One may interpret 137 + 1 as
@@ -1331,6 +1329,8 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
+
+\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7 n°5, 595-6.
 
 \bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
 
