--- a/test.tex
+++ b/test.tex
@@ -740,7 +740,7 @@ As ancient Egyptians used only fractions of type $1/n$, they were certainly awar
 $S_{5} = 137/60$. Indeed it appears in the Ptolemaic approximation for $\pi$: $\pi_{Pt} = 377/120 = 2 +  S_{5}/2$.
 
 It is strange that Eddington's Theory was rejected as soon as $a$ appeared to deviate from 137. Indeed, the
-following shows that \textit{137 plays a central role in ppb fine-tuning analysis}. Note that Nambu \cite{Nambu} showed that the mass 137 $\m_e$ is central in particle physics.
+following shows that \textit{137 plays a central role in ppb fine-tuning analysis}. Note that Nambu \cite{Nambu} showed that the mass $ 137 \m_e $ is central in particle physics.
 
 
 One may interpret 137 + 1 as
