--- a/test.tex
+++ b/test.tex
@@ -1330,7 +1330,7 @@ treating time on an equal footing with space''. Phys. Lett. B. 678(2):
 \bibitem{Koide} Koide Y. ``Fermion-Boson two-body model of quarks and leptons and
 Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
-\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7 n°5, 595-6.
+\bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7, number 5, 595-6.
 
 \bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
 
