--- a/test.tex
+++ b/test.tex
@@ -154,8 +154,10 @@ This \textit{'Optimal Computation Principle'} enligths the First Principle of Th
 
 While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are \textit{calculation bases}.
 
-The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the elementary Holic Principle. An elementary calculation gives also the \textit{invariant} Hubble constant, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}.
-
+The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}. We recall that, in Coherent Cosmology \cite{Sanchez1}, the Hubble radius $R$ is defined by the relative redshift law of $l$-distant galaxy groups, in the \textit{exponential} recession: 
+begin{equation}
+\delta \nu/\nu = R/l
+end{equation}
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of the first blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
 Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
@@ -169,12 +171,12 @@ However, as soon as the fine-tuning involves the observable Universe radius, it 
 \begin{figure*}
 \centering
 \includegraphics[width=\textwidth,height=14cm]{./figures/figure}
-\caption{\textit{The Topological Axis}(data in Table 1). The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the reunion of height 2D-1D holographic relations, for which five were already reported, hence the name `Topological Axis`. \textit{In the macro-physics side, with length unit $\lambdabar_e$, the Electron Compton reduced wavelength, the Universe circumference} $2\pi \times$ 13.812 billion light-years is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{massive string}, about 2.1 GeV. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor about 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
+\caption{\textit{The Topological Axis}(data in Table 1). The double natural logarithms (y = lnln(Y)) of the main dimensionless physical quantities (Y) corresponds to the special string dimension series d = 4k + 2, from k = 0 to k = 7, characteristics of the Bott sequence [19]. This is the reunion of height 2D-1D holographic relations, hence the name `Topological Axis`. Two relations comes from the double large number correlation \cite{Eddington}, one comes from the Carr and Rees weak boson-gravitation relation Eq(11)), and one comes from the Davies analysis \cite{Davies}, involving the CMB wavelength. \textit{In the macro-physics side, with length unit $\lambdabar_e$, the Electron Compton reduced wavelength, the Universe circumference} $2\pi \times$ 13.812 billion light-years is tied to the bosonic critical dimension 26, while Bott reduction $\Delta$d = 8 leads firstly to  d = 18: it is the \textit{thermal photon} (Cosmological Microwave Background), tied to the the mammal wavelength through the Sternheimer scale factor $j$ (section 8.2); another Bott reduction leads to d = 10 (super-string dimension): it is the \textit{Hydrogen atom}, and finally to d = 2: the \textit{massive string}, about 2.1 GeV. For the number 24 of transverse dimensions, it is the \textit{Kotov length} (section 4.3), multiplied by a factor about 2$\pi a$, with $a \approx 137.036$. For d $\approx \Gamma$, the Atiyah constant (section 8.2), it is the \textit{galaxy group} radius, a characteristic cosmic length ($10^{6}$ light-years, section 2.1). For k $\approx e^{2}$, $y \approx 2e$, it is the \textit{Grandcosmos} radius (section 3). 
 The Space-Time-Matter Holic dimension d = 30 (section 6) is tied to $c$ times the cosmic \textit{Super-period} (section 5). 
 \textit{In the micro-physics side, with the same length unit $\lambdabar_e$}, Bott reductions from d = 30 lead to the \textit{gauge bosons}: d = 22 for the GUT one, ($10^{16}$ GeV), d = 14 for the weak one and d = 6 for the (\textit{massive}) gluons, about 8.6 MeV.
 For the intermediary superstring value d = 10, there is the mean \textit{Pion}. For d $\approx \gamma \times \Gamma$, Y $\approx 495^2$ the square of the diminushed Green-Schwarz string dimension (496 - 1), it is the \textit{Brout-Englert-Higgs boson} (125.175 GeV). For k $\approx 2e^e$, it is the \textit{topon}, the visible Universe wavelength, the space quantum, which identifies with the mono-radial unit length of the Bekenstein-Hawking Universe entropy (section 3).
    \textit{With unit $2\pi$ times the Nambu mass $m_N~=~137m_e$}\cite{Nambu}, d = 24 and 26 corresponds to the \textit{photon and graviton masses}, defined by two-step holographic interaction \cite{Sanchez1}.}
-    \textit{The central dimension is d = 16, for a total $2^7$ of string dimensions in the Bott sequence. This suggests a liaison with the Eddington's matrix $16\times 16$}.
+    \textit{This is the extrapolation toward less number of the Double Large Number correlation. The central dimension is d = 16, for a total $2^7$ of string dimensions in the Bott sequence. This suggests a liaison with the Eddington's matrix $16\times 16$}\cite{Eddington}.
 \label{fig:figure_label}
 \end{figure*}
 
@@ -222,7 +224,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 
 We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics. The most famous fine tuning implies cosmic quantities, awkwardly called the `Double Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious clue in the steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
 This Cosmological Fine-Tuning leads directly to a \textit{Gravitational Hydrogen molecule model of the visible universe} \cite{Sanchez1}.
-This defines the Universe horizon radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with the Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$.
+This defines the Universe Hubble radius $R = 2a_{G} \lambdabar_{e}$, where the factor 2 comes from the bi-atomic structure, and where $\lambdabar_{e} = \hbar/cm_{e}$ is the Electron Compton reduced wavelength, while the gravitational coupling constant is: $a_{G} = \hbar c/Gm_{p}m_{H}$, where $m_p$ and $m_H$ are the proton and hydrogen atom masses. So, \textit{the speed $c$ is eliminated}, in accordance with the Coherent Cosmology which needs signal celerity far exceeding $c$. This gives $R \approx 13,812~Gly $, corresponding to a Hubble constant 70.790 (km/s)/Megaparsec, compatible with the most recent measurements \cite{Bonvin}: 72(3) (km/s)/Megaparsec. The latter confirms the value measured by the 1a type novae, while the standard optimization of 6 parameters results in a lower value, by $9\%$. This is a significant refutation of the standard cosmology, but the fact that the so-called Universe age is $\approx 13.8~yr$ cannot be due to chance. This means that the standard approch has something right, but the interpretation is false.
 
 Consider the wavelength of the visible Universe with critical mass $M= Rc^2/2G$: $$\lambdabar_{M} = \hbar /Mc \approx 4.00 \cdot 10^{-96} m$$ This `topon` corresponds to the value $n \approx 2e^e$, close to the touchstone n = 30 of the Topological Axis, see Fig. 1. This scheme illustrates the function $f(n + 4) = f^{2}(n)$
 and stems from the imbrication of relations of the form $\lambdabar_{e} /l_{micro} \sim (l_{macro} /\lambdabar_{e})^{2}$, followed by $ l_{macro} /\lambdabar_{e} \sim (\lambdabar_{e} /l^{\prime}_{micro} )^{2}$, leading to:
