--- a/test.tex
+++ b/test.tex
@@ -154,10 +154,10 @@ This \textit{'Optimal Computation Principle'} enligths the First Principle of Th
 
 While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are \textit{calculation bases}.
 
-The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}. We recall that, in Coherent Cosmology \cite{Sanchez1}, the Hubble radius $R$ is defined by the relative redshift law of $l$-distant galaxy groups, in the \textit{exponential} recession:
-begin{equation}
-\delta f/f = R/l
-end{equation}
+The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}. We recall that, in Coherent Cosmology \cite{Sanchez1}, the Hubble radius R is defined by the relative redshift law of l-distant galaxy groups, in the \textit{exponential} recession.
+%begin{equation}
+%\delta f/f = R/l
+%end{equation}
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
 Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
