--- a/test.tex
+++ b/test.tex
@@ -154,7 +154,7 @@ This \textit{'Optimal Computation Principle'} enligths the First Principle of Th
 
 While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are \textit{calculation bases}.
 
-The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}. We recall that, in Coherent Cosmology \cite{Sanchez1}, the Hubble radius $R$ is defined by the relative redshift law of $l$-distant galaxy groups, in the \textit{exponential} recession.
+The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}. We recall that, in Coherent Cosmology \cite{Sanchez1}, the Hubble radius $R$ is defined by the relative redshift law $\Delta f/f = R/l$ of $l$-distant galaxy groups, in the \textit{exponential} recession.
 %begin{equation}
 %\Delta f/f = R/l
 %end{equation}
