--- a/test.tex
+++ b/test.tex
@@ -201,7 +201,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     boson GUT & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}~?$ \\
     photon & 5.5  & 24 & 4.159 & & lnln$(m_N/m_{ph})\approx 4.130$ \\
     Kotov perimeter & 5.5  & 24 & 4.159 &lnln($2\pi l_K /r_e)\approx 4.159$ &  \\
-    Hubble radius R*6 & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(2\pi R /\lambdabar_e)\approx$ 4.5054  \\
+    Hubble radius R*6 & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(6 R /\lambdabar_e)\approx$ 4.5054  \\
     graviton & 6  & 26 & 4.505 &  & lnln$(m_N/m_{gr})\approx 4.485$ \\
     Supercycle period & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ 5.199 \\
     topon & - & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
