--- a/test.tex
+++ b/test.tex
@@ -158,6 +158,7 @@ The abnormal efficiency of elementary 3-fold dimensional analysis is justified i
 %begin{equation}
 %\Delta f/f = R/l
 %end{equation}
+
 Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
 Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
@@ -201,7 +202,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     boson GUT & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}~?$ \\
     photon & 5.5  & 24 & 4.159 & & lnln$(m_N/m_{ph})\approx 4.130$ \\
     Kotov perimeter & 5.5  & 24 & 4.159 &lnln($2\pi l_K /r_e)\approx 4.159$ &  \\
-    Hubble radius R*6 & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(6 R /\lambdabar_e)\approx$ 4.5054  \\
+    Hubble radius R$\ctime$6 & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(6 R /\lambdabar_e)\approx$ 4.5054  \\
     graviton & 6  & 26 & 4.505 &  & lnln$(m_N/m_{gr})\approx 4.485$ \\
     Supercycle period & 7  & 30 & 5.199 & & lnln$(T/t_e) \approx$ 5.199 \\
     topon & - & 2$e^e$ & 5.253 &  & lnln$(\lambdabar_e/\lambdabar_M) \approx$ 5.523 \\
@@ -234,7 +235,7 @@ $$
 \displaystyle
 \lambdabar_{e}/\lambdabar_{M} \sim (R/\lambdabar_{e})^{2} \sim (\lambdabar_{e}/ \lambdabar_{X})^{4}\\[+8pt]  % 1st row
 \sim (\lambda_{CMB}/ \lambdabar_{e})^{8} \sim (\lambdabar_{e}/\lambdabar_{W})^{16} \sim (2r_{H} /\lambdabar_{e})^{32}\\[+8pt] % 2nd row
-\sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{256}\\ % 3rd row
+\sim (\lambdabar_{e}/ l_{Gl} )^{64} \sim (\lambdabar_{str} /\lambdabar_{e} )^{128} \sim 2^{2^8}\\ % 3rd row
 \end{array}
 $$
 This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold. They include implicitly the above double fine-tuning and three  more relations that have been independently reported \cite{Sanchez1}. Thus, only three relations are really new. The overall large number $2^{256}$ has an obvious computational character, confirmed below by the dramatic appearance of the Eddington Large Number.
