--- a/test.tex
+++ b/test.tex
@@ -184,8 +184,8 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
 %R\{GC} = 2r_e^6/l_P^5\approx 9.0757\cdot10^{86}m$
 
 \begin{table*}
- \caption{Topological Axis Data with $R = 2a_G\lambdabar_e=2\hbar^2/Gm_em_pm_H~ \approx 13.812~ Glyr,R_{GC}=2r_e^6/l_P^5\approx 9.0758\cdot 10^{86}~m $}  
-  \centering
+ \caption{Topological Axis $f(d)~=~exp(2^{d/4})$. Data with $R = 2a_G\lambdabar_e=2\hbar^2/Gm_em_pm_H~ \approx 13.812~ Glyr,R_{GC}=2r_e^6/l_P^5\approx 9.0758\cdot 10^{86}~m $}  
+  
   \begin{tabular}{llllll}
     \toprule
     \multicolumn{6}{c}{$\lambdabar_M = 2l_P^2/R \approx 3.9989\cdot10^{-96} m$, $T = \hbar^{4} /\rho_{c}^{3/2} G_{F}^{5/2} \approx 5.4829 \cdot 10^{57} s, l_K = \lambdabar_e(a_Ga_w)^{1/2}, m_{ph}=a_wm_{gr}\approx 1.222\cdot10^{-55}kg$}                   \\
