--- a/test.tex
+++ b/test.tex
@@ -199,7 +199,7 @@ For the intermediary superstring value d = 10, there is the mean \textit{Pion}. 
     half mean Weak Boson & 3  & 14 & 2.426 & lnln(8.378~$\cdot~10^4)\approx$ 2.428  &   \\
     Higgs Boson & - & $\gamma\Gamma \approx$ 14.533 & 2.518 &lnln(2.449$~\cdot~10^5)\approx$ 2.518& $m_{Higgs} \approx$ 125.175$~ GeV ~$ ? \\ 
     thermal photon & 4  & 18 & 3.119 & lnln($hc/2k\theta_{CMB}\lambdabar_e) \approx$ 3.035 &  \\
-    boson GUT & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}~?$ \\
+    boson GUT & 5  & 22 & 3.812 & & $m_{GUT} \approx 2.30\cdot 10^{16}~GeV~?$ \\
     photon & 5.5  & 24 & 4.159 & & lnln$(m_N/m_{ph})\approx 4.130$ \\
     Kotov perimeter & 5.5  & 24 & 4.159 &lnln($2\pi l_K /r_e)\approx 4.159$ &  \\
     Hubble radius R*6 & 6  & 26 & 4.5054 & 4.506(3)\cite{Bonvin} & lnln$(6 R /\lambdabar_e)\approx$ 4.5054  \\
