--- a/test.tex
+++ b/test.tex
@@ -238,7 +238,7 @@ $$
 $$
 This series include the Cosmic Microwave Background wavelength $\lambda_{CMB}$ and a string wavelength $\lambdabar_{str}$, with mass about 2 MeV. Hence, the correlation is eight-fold. They include implicitly the above double fine-tuning and three  more relations that have been independently reported \cite{Sanchez1}. Thus, only three relations are really new. The overall large number $2^{256}$ has an obvious computational character, confirmed below by the dramatic appearance of the Eddington Large Number.
 
-In particular, as Davies quoted \cite{Davies} \textit{'The fact that R/\lambda_{CMB}\sim a_G^{3/4}$ seems to indicate yet another large-number coincidence'}. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we observe 
+In particular, as Davies quoted \cite{Davies} \textit{'The fact that $R/\lambda_{CMB}\sim a_G^{3/4}$ seems to indicate yet another large-number coincidence'}. By this order of magnitude, we infer rather precise relations. With the Hydrogen radius $r_H$, we observe 
 $ R/r_H \approx (4\pi \lambda_{CMB}/r_H)^{4}$, precise to $0.6\%$. 
 Considering the standard cosmological neutrino background (CNB), which wavelength is defined by $(\lambda_{CNB} / \lambda_{CMB})^{3} = 11/4$, we note that $R/ \lambdabar_{e} \approx
 ( \lambda_{CNB}^{2} / \lambda_{CMB} \lambdabar_{e} )^{4}$ to $1.7\%$. The appearance of the neutrino field is conform with the synthesis of the two main cosmologies, where the single Bang is replaced by a matter-antimatter Oscillatory Bounce \cite{Sanchez2}.
