--- a/test.tex
+++ b/test.tex
@@ -1258,6 +1258,8 @@ Superalgebras''. Invent. Math. 109, 405--444 (1992).
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
 7225--7237 (2011).
 
+\bibitem{Davies} Davie P. ''The Accidental Universe''. C.U.P. p. 92 (1993).
+
 \bibitem{Bousso} Bousso R. ``The Holographic Principle'', Review of Modern Physics
 74, 834 (2002).
 
