--- a/test.tex
+++ b/test.tex
@@ -13,7 +13,7 @@
 \usepackage[final]{graphicx}
 \usepackage{pstricks}
 \usepackage{cite}
-
+\usepackage{hyperref}
 \usepackage[varg]{txfonts}
 \usepackage{booktabs}       % professional-quality tables
 
@@ -1338,7 +1338,7 @@ Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
 \bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7, number 5, 595-6.
 
-\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/.
+\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. \href{https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/}.
 
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979).
@@ -1352,7 +1352,7 @@ Math. Soc. 11(3) 308--339 (1979).
 \bibitem{Moulin} Moulin T. Symposium 4, 11eme congres International de Cybernetique. Namur, Aout 1986: Utilisation en physique et biologie de referentiels spatio-structuro-temporels engendres par des Relateurs Arithmetiques. 
 %Moulin T. et Groupe Systema. Relateurs Arithmetiques (2 tomes): Ebauche du formalisme: avant la premiere %jonction avec les structures de Lie. ENSTA.(1993). See also: Moulin T. Vallet C. Nature cognition and System 1. %294. Carvallo M. (Ed). Kluwer Acad. Publisher. (1988)
 
-\bibitem{Brannen} Brannen C.A. ``The Lepton Masses``, http://brannenworks.com/MASSES2.pdf, (2006).
+\bibitem{Brannen} Brannen C.A. ``The Lepton Masses``, \href{http://brannenworks.com/MASSES2.pdf}, (2006).
 
 \bibitem{Polchinski} Polchinski J. ``String Theory'', vol. 1, p. 22 (C.U.P., 1998).
 
