--- a/test.tex
+++ b/test.tex
@@ -1338,7 +1338,7 @@ Cabibbo mixing''.  Lett. Nuovo Cimento 34, 201 (1982).
 
 \bibitem{Nambu} Nambu H. ''An empirical Mass Spectrum of Elementary Particles'. Phys. Vol. 7, number 5, 595-6.
 
-\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. \href{https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/}{\texttt{www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/}}.
+\bibitem{Atiyah1} Atiyah M. ``The fine-structure constant''. {\it https://www.heidelberg-laureate-forum.org/blog/video/lecture-monday-september-24-2018-sir-michael-francis-atiyah/}.
 
 \bibitem{Conway} Conway J.H. and Norton S.P. ``Monstrous Moonshine''. Bull. London
 Math. Soc. 11(3) 308--339 (1979).
