--- a/test.tex
+++ b/test.tex
@@ -48,7 +48,7 @@ F. M. Sanchez$^1\!$, \ V. A. Kotov$^2\!$, \ M. Grosmann$^3$, \ D. Weigel$^4$, \ 
 E-mail: hol137@yahoo.fr\\
 $^2$Astronomer at Crimean Astrophysical Observatory CrAO, Nauchny, Crimea, Russian Federation. vkotov43@mail.ru
 $^3$ Pr. at Universit\'{e} Louis Pasteur, Strasbourg, France (retired). michelgrosmann@me.com
-$^4$ Pr. at Universit\'{e} of Dijon and Paris 6, France (retired). dominique.weigel@orange.fr
+$^4$ Pr. at Universit\'{e} of Rennes and Paris 6, France (retired). dominique.weigel@orange.fr
 \\ $^5$ Pr. at Ecole Centrale, Paris, France (retired). renee.veysseyre@gmail.com
 $^6$Astronomer at OBSPM, Paris, France. christian.bizouard@obspm.fr
 \\ $^7$Architect / Math Instructor at ENSA Ecole Nationale Sup\'{e}rieure d'Architecture, Paris Malaquais, France. flawisky@free.fr
@@ -147,8 +147,7 @@ There is presently an intense debate in the physics community. While a minority 
 Only a minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, we show in section 2 that \textit{the later obeys the Topological Axis (Fig. (1), and, for the first time, they are connected with a series of ppb relations involving $e$, $\pi$ and $\gamma$} (section 9.4). This article shows also that the discovery of the sporadic groups, with, in particular, the monstruous moonshine correlation\cite{Borcherds}, is a crucial discovery for physics (section 8.5).
 
 In this debate unicity-multiplicity, pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. We interpret this central role of whole numbers by assuming that the Cosmos is a perfect computer. This is the very foundation of quantum physics. The section 3 shows the overall holographic quantification, breaking the Planck wall by a factor $10^{61}$, and \textit{justifying why the Cosmos is so large}.
-
-This \textit{'Optimal Computation Principle'} enligths the First Principle of Thermodynamics, the energy conservation. This is a more direct and logical explanation than the standard 'time uniformity'. Thus, Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: \textit{why one asks question ?}. 
+This \textit{'Optimal Computation Principle'} enligths the First Principle of Thermodynamics, the energy conservation. This is a more direct and logical explanation than the standard 'time uniformity'. 
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the above recurse to the Multiverse conundrum.
 
@@ -159,13 +158,13 @@ The abnormal efficiency of elementary 3-fold dimensional analysis is justified i
 %\Delta f/f = R/l
 %end{equation}
 
-Finally, there is the problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, but now it is admitted that almost everything is quantified. However, the continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
+Finally, there is the central problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, annonced by the above discoverers, from Proust to Mandel. Indeed, Planck believed in the \textit{mathematical continuum}, and was reluctant of his own \textit{physical discovery}, until 1912, when Poincar\'{e} demonstrated that the quantification of matter-light interaction was mandatory\cite{Sanchez1}. The continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}. This is shown in this article (section 9.3).
 
 Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
 
 One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependencies on $\alpha$ and $\alpha_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from known physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
-However, as soon as the fine-tuning involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the starting point of Coherent Cosmology \cite{Sanchez1}.
+This is misleading since, as soon as the fine-tuning involves the observable Universe radius, it signals the existence of a fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed \cite{Eddington}, must be permanent}. Extending this to the standard spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology and the starting point of Coherent Cosmology \cite{Sanchez1}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
@@ -1113,6 +1112,8 @@ Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
+
+Thus, Intelligent Life receives a justification: to help the cosmological computation. This Inverted Anthropic Principle answers the first of all questions: \textit{why one asks question ?}
 
 The present article confirms the Topological Axis, which was obtained by the simplest visualizing method to represent in a single figure the characteristic lengths in macro and micro-physics, taking the electron reduced Compton wavelength as unity. \textit {the double logarithm representation was the simplest one, and it appeared later this was the reunion of a serie of height 1D-2D holographic relations, respecting the topologico-algebric Bott period}.
 
